--- a/sources/enumext.dtx
+++ b/sources/enumext.dtx
@@ -1536,7 +1536,7 @@
 %
 % \item Each \emph{\enquote{item content}} in the environment is placed
 %   within a \myenv{minipage} environment whose \emph{width} is stored
-%   in the dimension |\itemwidth| does NOT include \mykey{labelwith} and
+%   in the dimension |\itemwidth| does NOT include \mykey{labelwidth} and
 %   \mykey{labelsep}, only the \emph{width of the content}.
 %
 % \item You cannot have floating environments like \myenv{figure} or
@@ -2208,7 +2208,7 @@
 %  The \myenv*{enumext*} and \myenv*{keyans*} environments are
 %  implemented using |\makebox| and \myenv{minipage} which causes
 %  \emph{\enquote{list indent}} to always be equal to the value passed to
-%  \mykey{labelwdith} plus \mykey{labelsep}. Passing a value to this key is
+%  \mykey{labelwidth} plus \mykey{labelsep}. Passing a value to this key is
 %  equivalent to setting the value for the \mykey{list-offset} key.
 % \end{important}
 %
